src/riot-rs-macros/tests/ui/main/misspelled_hook_name.stderr
error: unsupported hook (`usb_builder_hook` are supported)
  --> tests/ui/main/misspelled_hook_name.rs:10:17
   |
10 | #[riot_rs::main(usb_builder_hooook)]
   |                 ^^^^^^^^^^^^^^^^^^
